nginx/nginx-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1 
  selector:    
    matchLabels:
      app: nginx    
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-deployment
spec:
  selector:
    app: nginx
  # type: LoadBalancer

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      # nodePort: 30002
